--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600&family=Montserrat:wght@100;200;300;400;500;600&family=Poppins:wght@100;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500&display=swap');
+
 body {
-    background: rgb(29, 29, 29);
+    background: #343A40;
     padding: 0;
     margin: 0;
     font-family: Manrope;
     color: #fff;
+}
+
+h1,h2,h3 {
+    font-family: Montserrat;
 }
