--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -30,6 +30,10 @@
     display: block;
 }
 
+.navButton > img{
+    fill:"red";
+}
+
 @media only screen and (max-width:600px) {   /*  Per telefono*/
     
 }
