--- a/src/global.css
+++ b/src/global.css
@@ -12,3 +12,49 @@ body {
 h1,h2,h3 {
     font-family: Montserrat;
 }
+
+#title{
+    position: absolute;
+    width: 509px;
+    height: 276px;
+    left: 232px;
+    top: 155px;
+
+    font-style: italic;
+    font-weight: 300;
+    font-size: 100px;
+    color: #D26C6C;
+    text-shadow: 0px 4px 4px rgba(255, 108, 108, 0.35);
+}
+
+#text{
+    position: absolute;
+    width: 1174px;
+    height: 298px;
+    left: 656px;
+    top: 393px;
+
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+
+    color: #FFFFFF;
+}
+
+#gray{
+    position: absolute;
+    width: 175px;
+    height: 36px;
+    left: 190px;
+    top: 116px;
+
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 44px;
+
+color: #949494;
+}
