--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -15,15 +15,15 @@
 }
 
 .title {
-    font-family: "Source Code Pro";
+    font-family: 'Source Code Pro';
     font-weight: 400;
     font-size: 1.7vw;
     margin: 1vh;
 }
 
 .title::first-letter {
-    color: #EB5D5D;
-    text-shadow: 0px 0px 3px #FF4747;
+    color: #eb5d5d;
+    text-shadow: 0px 0px 3px #ff4747;
 }
 
 .navContent > * {
@@ -31,14 +31,14 @@
 }
 
 .navButton > svg {
-    fill: #C4C4C4;
-    width:70%;
+    fill: #c4c4c4;
+    width: 70%;
     transition: 0.15s;
 }
 
 .navButton > svg:hover {
-    fill: #D26C6C;
-    filter: drop-shadow(0px 0px 4px #FF6C6C);
+    fill: #d26c6c;
+    filter: drop-shadow(0px 0px 4px #ff6c6c);
     cursor: pointer;
 }
 
@@ -53,11 +53,10 @@
     flex-direction: column;
 }
 
-@media only screen and (max-width:600px) {   /*  Per telefono*/
-    
+@media only screen and (max-width: 1280px) {
+    /*  Per tablet*/
 }
 
-@media only screen and (max-width:1280px) {   /*  Per tablet*/
-    
+@media only screen and (max-width: 600px) {
+    /*  Per telefono*/
 }
-
