--- a/src/global.css
+++ b/src/global.css
@@ -2,37 +2,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500&display=swap');
 
 body {
-    background: #343A40;
+    background: #343a40;
     padding: 0;
     margin: 0;
     font-family: Manrope;
     color: #fff;
+    overflow: hidden;
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
     font-family: Montserrat;
 }
 
-#title{
-    position: absolute;
-    width: 509px;
-    height: 276px;
-    left: 232px;
-    top: 155px;
+#title {
+    margin-top: 1%;
+    margin-left: 10%;
+    
 
     font-style: italic;
     font-weight: 300;
-    font-size: 100px;
-    color: #D26C6C;
-    text-shadow: 0px 4px 4px rgba(255, 108, 108, 0.35);
+    font-size: 70px;
+    color: #fff;
 }
 
-#text{
-    position: absolute;
-    width: 1174px;
-    height: 298px;
-    left: 656px;
-    top: 393px;
+#title::first-letter {
+    color: #D26C6C;
+}
+
+#text {
+    width: 50%;
+    margin-left: 50%;
 
     font-family: 'Manrope';
     font-style: normal;
@@ -40,21 +41,82 @@ h1,h2,h3 {
     font-size: 50px;
     line-height: 68px;
 
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
-#gray{
-    position: absolute;
-    width: 175px;
-    height: 36px;
-    left: 190px;
-    top: 116px;
+/* START h1 */
 
+#gray{
     font-family: 'Montserrat';
     font-style: italic;
     font-weight: 300;
     font-size: 36px;
     line-height: 44px;
 
-color: #949494;
+    color: #949494;
 }
+
+#gray:first-child {
+    
+    margin-top: 2%;
+    margin-left: 8%;
+}
+
+#title ~ #gray {
+    
+    margin-top: 1%;
+    margin-left: 8%;
+}
+
+#PgCont{
+    display: inline-block;
+    margin-top: 3%;
+    margin-left:1%;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 59px;
+    color: #FFF;
+
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#list{
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+    display: inline-block;
+    margin-left: 12%;
+    color: #D26C6C;
+}
+
+#list:hover{
+    transform: rotate(90deg);
+}
+
+
+/* END h1 */
+
+/* width 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  Track 
+  ::-webkit-scrollbar-track {
+    background: #212529;
+  }
+   
+   Handle 
+  ::-webkit-scrollbar-thumb {
+    background: #6C757D;
+    border-radius: 10px;
+  }
+  
+   Handle on hover 
+  ::-webkit-scrollbar-thumb:hover {
+    background: #5A636B; 
+  }*/
+  
