--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -36,7 +36,8 @@
     transition: 0.15s;
 }
 
-.navButton > svg:hover {
+.navButton > svg:hover,
+.navClicked > svg {
     fill: #d26c6c;
     filter: drop-shadow(0px 0px 4px #ff6c6c);
     cursor: pointer;
