--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -38,7 +38,7 @@
 
 .navButton > svg:hover,
 .navClicked > svg {
-    fill: #d26c6c;
+    fill: #ff4747;
     filter: drop-shadow(0px 0px 4px #ff6c6c);
     cursor: pointer;
 }
