--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500&display=swap');
 
 body {
-    background: #343a40;
+    /*background: #343a40;  originale*/
+    background: #262c30; /*Più scuro*/
     padding: 0;
     margin: 0;
     font-family: Manrope;
