--- a/src/pages/css/Root.module.css
+++ b/src/pages/css/Root.module.css
@@ -26,3 +26,16 @@
 
     color: #949494;
 }
+
+.title{
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 300;
+    font-size: 100px;
+    line-height: 122px;
+    margin: 0 0 0 10%;
+
+    color: #D26C6C;
+
+    text-shadow: 0px 4px 4px rgba(255, 108, 108, 0.35);
+}
