Chores(margin and iframe)

--- a/src/pages/css/Util.module.css
+++ b/src/pages/css/Util.module.css
@@ -4,7 +4,7 @@
 }
 
 .RedLine > div:nth-child(1) {
-    background-color: #d26c6c;
+    background-color: #ff4747;
     border-radius: 15px;
     display: block;
     margin: 5vh 1.1vh;
