--- a/src/pages/css/Root.module.css
+++ b/src/pages/css/Root.module.css
@@ -6,7 +6,7 @@
 .text {
     font-family: 'Manrope';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 100;
     font-size: 40px;
     line-height: 68px;
     text-align: right;
@@ -35,7 +35,7 @@
     line-height: 122px;
     margin: 0 0 0 10%;
 
-    color: #D26C6C;
+    color: #ff4747;
 
     text-shadow: 0px 4px 4px rgba(255, 108, 108, 0.35);
 }
