--- a/src/pages/css/Web.module.css
+++ b/src/pages/css/Web.module.css
@@ -1,14 +1,23 @@
-.frame{
-    border-radius: 30px;
+.frame1{
+    border-radius: 20px;
     width: 90%;
     height: 550px;
 }
 
+.frame2{
+    margin-left: 3%;
+    width: 100%; 
+    height: 600px; 
+    border: 0px none;
+    border-radius: 20px;
+}
+
 .normalText{
+    margin-top: 2%;
     display: inline-block;
     font-family: 'Manrope';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 100;
     font-size: 40px;
     line-height: 68px;
     text-align: right;
@@ -27,6 +36,6 @@
 }
 
 .specialText::first-letter{
-    color: #D26C6C;
+    color: #ff4747;
     text-shadow: 0px 2px 2px #000000;
 }
