--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -30,34 +30,49 @@
     display: block;
 }
 
-.navButton > svg {
+.NavButton > svg {
     fill: #c4c4c4;
-    width: 70%;
+    height: 2vw;
+    text-align: center;
+    width: 75%;
     transition: 0.15s;
 }
 
-.navButton > svg:hover,
+.NavButton > svg:hover,
 .navClicked > svg {
     fill: #ff4747;
     filter: drop-shadow(0px 0px 4px #ff6c6c);
     cursor: pointer;
 }
 
-.navButton {
+.NavButton {
     display: block;
     position: relative;
-    margin: 0.5vh 0;
+}
+
+.NavLink {
+    margin: 0.7vh 0;
+    height: 4.3vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .navButtons {
     display: flex;
+    margin-top: 5vh;
     flex-direction: column;
 }
 
 @media only screen and (max-width: 1280px) {
     /*  Per tablet*/
+    .NavLink {
+        margin: 0.4vh 0;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-    /*  Per telefono*/
+    .NavLink {
+        margin: 0.1vh 0;
+    }
 }
