--- a/src/pages/css/Crypting.module.css
+++ b/src/pages/css/Crypting.module.css
@@ -17,6 +17,7 @@
 
 .normalText{
     margin-top: 2%;
+    margin-left: 5%;
     display: inline-block;
     font-family: 'Manrope';
     font-style: normal;
