--- a/src/pages/css/Root.module.css
+++ b/src/pages/css/Root.module.css
@@ -11,8 +11,8 @@
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 100;
-    font-size: 40px;
-    line-height: 68px;
+    font-size: 2.4vh;
+    line-height: 3.2vh;
     text-align: right;
     color: #ffffff;
     margin-right: 3%;
