--- a/src/pages/css/Home.module.css
+++ b/src/pages/css/Home.module.css
@@ -2,16 +2,16 @@
 .title0 {
     font-style: italic;
     font-weight: 300;
-    font-size: 70px;
+    font-size: 3.5vw;
     color: #fff;
-    width: 1.2rem;
+    width: 1.5rem;
     display: inline-block;
     transition: 0.15s;
     margin: 0;
 }
 
 .title0:hover {
-    width: 18.0rem;
+    width: 14vw;
 }
 
 .title0:hover::after {
@@ -20,24 +20,39 @@
 
 .title0 {
     color: #ff4747;
-    margin-left: 12%;
-    padding: 0;
 }
+
+
 
 .list {
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 300;
-    font-size: 50px;
-    line-height: 68px;
+    font-size: 3vh;
     display: inline-block;
     margin-left: 2vh;
     color: #ff4747;
     transition: 0.15s;
 }
 
+@media screen and (max-width: 950px) {
+    .title0,.title {
+        margin: 2vw 0;
+        font-size: 10vw;
+        width: 1rem;
+    }
+
+    .list {
+        font-size: 4vh;
+    }
+}
+
 .list:hover {
-    transform: translate(1vh)
+    transform: translate(1vh);
+}
+
+.args{
+    display: none;
 }
 
 .list:hover ~ .args li{
@@ -50,10 +65,9 @@
     margin-left: 1%;
     font-style: italic;
     font-weight: 300;
-    font-size: 48px;
+    font-size: 3vh;
     line-height: 59px;
     color: #fff;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
