--- a/src/css/MobileNav.module.css
+++ b/src/css/MobileNav.module.css
@@ -93,6 +93,7 @@
 }
 
 .navRow {
+    text-align: center;
     height: 5vh;
     margin-bottom: 2vh;
     display: grid;
@@ -102,6 +103,7 @@
 .navRow svg {
     margin: 50% 0;
     fill: white;
+    width: 6vw;
     height: 5vh;
     transition: 0.25s;
 }
@@ -111,6 +113,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
 }
 
 .navRow svg:hover {
